<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="corkcollector.source.ProfileScreen">

    <GridLayout
        android:id="@+id/mainGrid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/userPhotoImage"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_marginBottom="11.25dp"
            android:layout_marginLeft="11.25dp"
            android:layout_marginRight="11.25dp"
            android:layout_marginStart="112dp"
            android:layout_marginTop="11.25dp"
            android:layout_rowSpan="1"
            android:adjustViewBounds="false"
            android:contentDescription="@string/wine_photo_description"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/user" />

        <TextView
            android:id="@+id/userFullNameText"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="112dp"
            android:layout_marginTop="15dp"
            android:layout_row="1"
            android:text="John Doe"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/greyBlock"
            android:layout_width="175dp"
            android:layout_height="2dp"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="112dp"
            android:layout_marginTop="10dp"
            android:layout_row="2"
            android:adjustViewBounds="false"
            android:contentDescription="@string/grey_block"
            android:scaleX="30"
            app:srcCompat="@drawable/grey" />

        <TextView
            android:id="@+id/memberSinceText"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="end"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:layout_row="3"
            android:maxWidth="175dp"
            android:text="@string/member_since_text"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/memberSinceInfoText"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:layout_gravity="start"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:layout_row="3"
            android:maxWidth="175dp"
            android:text="September 23, 2017"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/winesTastedText"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="end"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:layout_row="4"
            android:maxWidth="175dp"
            android:text="@string/wines_tasted_text"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/winesTastedInfoText"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:layout_row="4"
            android:maxWidth="175dp"
            android:text="102"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/wineriesVisitedText"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="end"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:layout_row="5"
            android:maxWidth="175dp"
            android:text="@string/wineries_visited_text"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/wineriesVisitedInfoText"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:layout_row="5"
            android:maxWidth="175dp"
            android:text="14"
            android:textAlignment="center" />

        <Button
            android:id="@+id/viewRecommendedWinesButton"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_marginLeft="112dp"
            android:layout_marginStart="112dp"
            android:layout_marginTop="30dp"
            android:layout_row="6"
            android:text="View Recommendations"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/viewTastedWinesButton"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_marginLeft="112dp"
            android:layout_marginStart="112dp"
            android:layout_marginTop="10dp"
            android:layout_row="7"
            android:text="View Tasted Wines"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/viewVisitedWineriesButton"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_marginLeft="112dp"
            android:layout_marginStart="112dp"
            android:layout_marginTop="10dp"
            android:layout_row="8"
            android:text="View Visited Wineries"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/viewWineCellarButton"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_marginLeft="112dp"
            android:layout_marginStart="112dp"
            android:layout_marginTop="10dp"
            android:layout_row="9"
            android:text="View Wine Cellar"
            android:textColor="@color/colorAccent" />
    </GridLayout>
</android.support.constraint.ConstraintLayout>
